Bug 160346 - Default konsole shortcut for adding bookmarks (Ctrl+B) is a bad idea
Summary: Default konsole shortcut for adding bookmarks (Ctrl+B) is a bad idea
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-04 00:01 UTC by Saurabh Asthana
Modified: 2008-09-22 04:29 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Saurabh Asthana 2008-04-04 00:01:32 UTC
Version:            (using KDE 4.0.3)
Installed from:    Ubuntu Packages
OS:                Linux

Ctrl-B is a commonly used shell shortcut (for example in navigating back in the command line); by default konsole maps this to "Add Bookmark", a feature I've never used. Maybe others use this more, but it seems a very bad idea for the default binding to map an important key combo to a much less important secondary functionality of konsole.

I'm aware others have reported this, but it remains the default in 4.0.3; that should change.
Comment 1 Kurt Hindenburg 2008-06-11 18:44:16 UTC
I agree; back in the day Konsole (3.5) was not to use any Ctrl+ shortcuts to allow programs running in Konsole to use them.  There used to be code to warn users about this.  I haven't look at /trunk or 4.0 though.
Comment 2 kavol 2008-06-25 12:51:20 UTC
I have this problem with "Ctrl+S" shortcut - I use this for quicksearch feature of Midnight Commander, but Konsole 4.x always says "Output has been suspended by pressing Ctrl+S. Press Ctrl+Q to resume."

and the bad thing about this is that unlike "Ctrl+B", this one is NOT on the list of shortcuts within the configuration, so I cannot do anything about it
Comment 3 Robert Knight 2008-06-25 13:47:01 UTC
Hi kavol,

That is fixed in KDE 4.1.  Also applies to emacs.
Comment 4 kavol 2008-06-25 13:57:44 UTC
ok, thanks
(now that if only KDE 4.1 packages would be available in the distros :-))
Comment 5 Saurabh Asthana 2008-07-01 09:40:57 UTC
The Ctrl-B bug still exists in KDE 4.1. Also, I cannot apparently use alt keys that are mapped to menu shortcuts. E.g., alt-f in emacs (which should advance the cursor) instead opens the file menu. Very poor behavior.
Comment 6 Robert Knight 2008-07-01 22:29:28 UTC
> E.g., alt-f in emacs (which should advance the cursor) instead
> opens the file menu. Very poor behavior. 

That is fixed.
Comment 7 Saurabh Asthana 2008-07-01 23:02:45 UTC
Fixed where? In svn? It's still broken in the beta.

On 1 Jul 2008 20:29:29 -0000, Robert Knight <robertknight@gmail.com> wrote:
[bugs.kde.org quoted mail]
Comment 8 Robert Knight 2008-07-02 01:24:17 UTC
> Fixed where? In svn? It's still broken in the beta. 

Yes.  The fix will appear in RC1 which is due to be released shortly.  Sorry for not being clear about that.
Comment 9 Saurabh Asthana 2008-07-02 01:33:46 UTC
Perhaps I should file a separate bug for this, but there is also an
odd behavior where if I set the shortcut to a custom one, it does not
save, even during the session - I cannot reproduce exactly, but if I
map the bookmarks shortcut to 'none', then do some stuff (maybe switch
between tabs, or start a new session), the default shortcut is
restored, for entirely mysterious reasons.

On 1 Jul 2008 23:24:19 -0000, Robert Knight <robertknight@gmail.com> wrote:
[bugs.kde.org quoted mail]
Comment 10 Thomas Zander 2008-07-07 13:34:51 UTC
I can still reproduce the bug in svn-trunk.  Even after removing my konsolerc.

Are you sure that 'Add Bookmarks' is explicitly set to have no keyboard shortcut?
Comment 11 Thomas Zander 2008-07-07 13:35:34 UTC
I would classify this as a bug, not a wishlist item.
Comment 12 Thomas Zander 2008-07-23 19:00:07 UTC
SVN commit 837041 by zander:

Fixes: Default konsole shortcut for adding bookmarks can not be configured
CCBUG: 160346
Details:
    Actions should be added to the action collection prior to displaying the menu, so
    we should create them in the constructor.
    I added a d-pointer to hold references to the actions so we don't just create new ones
    later overwriting the properly-configured ones.
    This commit additionally fixes memory leaks by avoiding the re-creation of the actions every
    time the menu is dirty.  (they were never deleted explicitly)

Note that this commit is on 4.2, so unless someone feels its safe to backport to the 4.1 branch
it will not be released in 4.1


 M  +38 -26    kbookmarkmenu.cc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=837041
Comment 13 Robert Knight 2008-09-22 04:29:36 UTC
Fixed in SVN - changed default shortcut for add bookmark to Ctrl+Shift+B