Change default shortcut for bookmarks from Ctrl+B to Ctrl+Shift+B, now possible thanks to Aaron's fixes to KBookmarkMenu.

BUG:160346
CCBUG:168985


svn path=/trunk/KDE/kdebase/apps/konsole/; revision=863371